--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -23,11 +24,15 @@
     "embla-carousel-react": "^8.3.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.2",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "normalize.css": "^8.0.1",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
+    "sqlite3": "^5.1.7",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
