--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
     "next": "14.2.14",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "normalize.css": "^8.0.1",
     "prisma": "^5.22.0",
@@ -35,7 +36,8 @@
     "sqlite3": "^5.1.7",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.3.7"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
