--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "trailingComma": "es5"
   },
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -30,34 +30,32 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel-autoplay": "^8.3.0",
-    "embla-carousel-react": "^8.3.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
-    "mongodb": "^6.11.0",
-    "mongoose": "^8.8.2",
     "next": "14.2.14",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "next-transpile-modules": "^10.0.1",
     "normalize.css": "^8.0.1",
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
-    "sqlite3": "^5.1.7",
+    "sonner": "^1.7.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.3.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "html-loader": "^5.1.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
