add map for address user

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ AUTH_GOOGLE_ID=478352584298-qe9vcin028e1frek03s791ptur86c1i5.apps.googleusercont
 AUTH_GOOGLE_SECRET=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
 HASH_PASS_SECRET=LFkdJKDskHsl4845k84f8dcu5497sHDlx5THSLF
 NEXTAUTH_URL=http://localhost:3000
+GOOGLE_MAP_KEY=AIzaSyBou2IZphv2OiYW6L1zdubkFDU8XBjHXmI
