--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "clsx": "^2.1.1",
     "jalali-moment": "^3.3.11",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.1.0",
+    "leaflet-geosearch": "^4.1.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-auth": "^4.24.11",
@@ -41,10 +44,11 @@
     "next-transpile-modules": "^10.0.1",
     "normalize.css": "^8.0.1",
     "prisma": "^5.22.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.14.1",
+    "react-leaflet": "^4.2.0",
     "sonner": "^1.7.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
@@ -54,6 +58,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
