--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eslint-config-next": "14.2.14",
     "html-loader": "^5.1.0",
     "postcss": "^8",
-    "prettier": "^3.4.2",
+    "prettier": "3.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
