--- a/package.json
+++ b/package.json
@@ -43,16 +43,21 @@
     "next-themes": "^0.3.0",
     "next-transpile-modules": "^10.0.1",
     "normalize.css": "^8.0.1",
+    "party-js": "^2.2.0",
     "prisma": "^5.22.0",
     "react": "^18.0.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.14.1",
     "react-leaflet": "^4.2.0",
+    "react-tsparticles": "^2.12.2",
+    "react-use": "^17.6.0",
     "sonner": "^1.7.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.8.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
