--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-menubar": "^1.1.2",
@@ -35,15 +36,11 @@
     "jalali-moment": "^3.3.11",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
-    "leaflet-control-geocoder": "^3.1.0",
     "leaflet-geosearch": "^4.1.0",
-    "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
-    "next-transpile-modules": "^10.0.1",
     "normalize.css": "^8.0.1",
-    "party-js": "^2.2.0",
     "prisma": "^5.22.0",
     "react": "^18.0.0",
     "react-confetti": "^6.2.2",
@@ -51,13 +48,10 @@
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.14.1",
     "react-leaflet": "^4.2.0",
-    "react-tsparticles": "^2.12.2",
-    "react-use": "^17.6.0",
     "sonner": "^1.7.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "tsparticles": "^3.8.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
