--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.14.1",
     "react-leaflet": "^4.2.0",
+    "react-multi-date-picker": "^4.5.2",
     "sonner": "^1.7.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
