--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-query-devtools": "^5.72.1",
+    "@tanstack/react-query-next-experimental": "^5.72.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -49,6 +53,8 @@
     "react-intersection-observer": "^9.14.1",
     "react-leaflet": "^4.2.0",
     "react-multi-date-picker": "^4.5.2",
+    "react-rating": "^2.0.5",
+    "react-simple-star-rating": "^5.1.7",
     "sonner": "^1.7.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
@@ -56,6 +62,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@svgr/webpack": "^8.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
@@ -63,12 +70,19 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.14",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "html-loader": "^5.1.0",
     "postcss": "^8",
-    "prettier": "3.5.0",
+    "prettier": "^3.5.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.29.0"
   }
 }
