--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@next/bundle-analyzer": "^15.3.0",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -33,8 +31,6 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.72.1",
-    "@tanstack/react-query-devtools": "^5.72.1",
-    "@tanstack/react-query-next-experimental": "^5.72.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -44,6 +40,7 @@
     "leaflet-geosearch": "^4.1.0",
     "next": "14.2.14",
     "next-auth": "^4.24.11",
+    "next-seo": "^6.6.0",
     "next-themes": "^0.3.0",
     "normalize.css": "^8.0.1",
     "prisma": "^5.22.0",
@@ -54,8 +51,6 @@
     "react-intersection-observer": "^9.14.1",
     "react-leaflet": "^4.2.0",
     "react-multi-date-picker": "^4.5.2",
-    "react-rating": "^2.0.5",
-    "react-simple-star-rating": "^5.1.7",
     "sonner": "^1.7.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
@@ -73,7 +68,6 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
-    "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "eslint-config-prettier": "^10.1.1",
