--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@/*": ["./*"],
       "@icons/*" : ["public/icons/*"],
-      "@types/*" : ["types/*"]
+      "@types/*" : ["types/*"],
+      "@components/*" : ["components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
