--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tarkhine",
+  "name": "tarkhineh",
   "version": "0.1.0",
   "private": true,
   "prettier": {
@@ -51,6 +51,7 @@
     "react-intersection-observer": "^9.14.1",
     "react-leaflet": "^4.2.0",
     "react-multi-date-picker": "^4.5.2",
+    "regjsgen": "^0.8.0",
     "sonner": "^1.7.1",
     "sqlite3": "^5.1.7",
     "swiper": "^11.1.14",
