--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -38,6 +38,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.1.0",
+    "mongodb": "^6.16.0",
     "next": "14.2.14",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
