--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "mongodb": "^6.16.0",
     "next": "14.2.14",
     "next-auth": "^4.24.11",
+    "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.8.16",
     "normalize.css": "^8.0.1",
     "prisma": "^5.22.0",
     "react": "^18.0.0",
