--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-query-devtools": "^5.77.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
