--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
   "semi": false,
   "singleQuote": true,
+  "printWidth": 100,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "printWidth": 80
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
-
