fix foods page admin panel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./*"],
       "@icons/*" : ["public/icons/*"],
-      "@types/*" : ["types/*"],
+      "@types/*" : ["types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
